[GStreamer][WebRTC] A few uninitialized variables were added in 304213@main https://bugs.webkit.org/show_bug.cgi?id=303985

Reviewed by Xabier Rodriguez-Calvar.

Initialize audio-related instance member variables.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:

Canonical link: https://commits.webkit.org/304348@main